# axum-baby

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
database/src/: activity.rs  banner.rs  business.rs  campaign.rs  criteria_review.rs  did.rs  email.rs  follower_business.rs  lib.rs  media.rs  native_enum.rs  notification.rs  prelude.rs  reply.rs  review.rs  search_param.rs  social.rs  storage.rs  super_user.rs  user.rs  user_campaign.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
sea/: Cargo.toml
sea/src/: cake.rs  cake_filling.rs  cooker.rs  filling.rs  fruit.rs  lib.rs  prelude.rs
src/: database.rs  intercept.rs  lib.rs  main.rs  open_api.rs  routes.rs  schedulers.rs  services.rs
src/database/: enum_type.rs  func.rs  model.rs  prisma.rs  query_buider.rs  schema.rs
src/intercept/: did.rs  sercurity.rs
src/routes/: body.rs  path.rs  query.rs
src/schedulers/: cmc.rs
src/services/: auth.rs  business.rs  user.rs
