[package]
name = "axum-baby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "error",
    "sea"
]

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16.1", features = ["derive"] }
axum-macros = "0.3.7"
error = { path = "./error" }
sea = { path = "./sea" }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","with-uuid", "with-chrono", "with-json", "postgres-array" ] }
