[package]
name = "sea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros","with-uuid", "with-chrono", "with-json", "postgres-array" ] }
serde = { version = "1.0", features = ["derive"] }
